Fixes alignment of third-text-details

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -432,6 +432,7 @@ footer .half {
 
 .logos {
 	max-width: 1200px;
+	align-items: flex-start !important;
 }
 
 
